fix: popup alignment

--- a/packages/i18n/src/css/locale-switcher.css
+++ b/packages/i18n/src/css/locale-switcher.css
@@ -1,3 +1,9 @@
 .locale-switcher > ul.dropdown-menu li[data-aria-selected="true"] {
   display: none;
 }
+
+@media screen and (min-width: 576px) {
+  .locale-switcher > ul.dropdown-menu {
+    right: 1%;
+  }
+}
