--- a/packages/ui/src/assets/css/dropdownMenu.css
+++ b/packages/ui/src/assets/css/dropdownMenu.css
@@ -2,6 +2,7 @@
   cursor: pointer;
   align-items: center;
   display: grid;
+  position: relative;
 }
 
 .dropdown-container > ul.dropdown-menu {
@@ -13,8 +14,10 @@
   padding-inline-start: 0;
   padding: 0.15rem 0;
   position: absolute;
-  top: 70%;
+  top: 100%;
   z-index: var(--dropdown-z-index, 999);
+  min-width: 160px;
+  width: max-content;
 }
 
 .dropdown-container[data-aria-expanded="true"]
